--- a/public/html/home.html
+++ b/public/html/home.html
@@ -25,29 +25,39 @@
 </head>
 
 <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Navbar w/ text</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarText">
-                  <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                  </ul>
-                  <span class="navbar-text">
-                    Navbar text with an inline element
-                  </span>
-                </div>
-              </nav>
-              
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar w/ text</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Cardio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Strength Training</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Powerlifting</a>
+                </li>
+            </ul>
+
+        </div>
+    </nav>
+
+
+
+
+
+
+
+    </nav>
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
@@ -106,7 +116,11 @@
                 </div>
             </div>
         </div>
-
+        <div class="container"><p><br><br></p></div>
+    </div>
+        <div class="footer">
+            <p>&copy; Copyright 2019</p>
+        </div>
 
 </body>
 
